deploy/k8s/worker-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: thang909/voting-app-microservice-worker
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
