deploy/k8s/result-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deploy
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: thang909/voting-app-microservice-result
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: prod
spec:
  type: NodePort
  selector:
      app: result
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
