deploy/k8s/vote-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deploy
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: thang909/voting-app-microservice-vote
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: prod
spec:
  type: NodePort
  selector:
      app: vote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
