deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: vote.example.com
      http:
        paths:
          # Path mặc định (root) để cuối cùng
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80


    - host: result.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
